start: streamline patient page

--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -1,4 +1,4 @@
-<div class="container" id="patientID" *ngIf="patient">
+<div class="container" id="patientID" *ngIf="patient$ | async as patient">
   <div class="patient-container">
 
     <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort" [expts]="exptTypes"></app-patient-nav>
