fix patient-samples ref

--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -57,7 +57,7 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <app-patient-samples [patient]="patient"></app-patient-samples>
+        <app-patient-samples [samples]="patient.samples"></app-patient-samples>
       </mat-expansion-panel>
 
       <!-- SYMPTOMS  -->
