--- a/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
+++ b/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
@@ -1,1 +1,1 @@
-<app-patient-timepoints [samples]="patient.samples" showMissing='true'></app-patient-timepoints>
+<app-patient-timepoints [samples]="samples" showMissing='true'></app-patient-timepoints>
