--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -1,7 +1,7 @@
 <div class="container" id="patientID" *ngIf="patientData$ | async as patientData">
   <div class="patient-container">
-
     <ng-container *ngIf="patientData.patient as patient">
+
       <app-patient-nav class="nav patient-nav" [ngClass]="patient.cohort" [cohort]="patient.cohort" [expts]="exptTypes"></app-patient-nav>
 
       <div class="patient-content">
@@ -135,4 +135,5 @@
     </div>
   </div>
 
+</div>
 </div>
