--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -105,10 +105,10 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <ng-container [ngSwitch]="expt.dataset_id">
-              <app-patient-hla *ngSwitchCase="'hla'" [data]="expt['hla']['data']" [patientID]="patient.patientID"></app-patient-hla>
-              <app-patient-viral-seq *ngSwitchCase="'ebola-virus-seq'" [sequences]="expt['ebola-virus-sequence']['data']" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
-              <app-patient-viral-seq *ngSwitchCase="'lassa-virus-seq'" [sequences]="expt['lassa-virus-sequence']['data']" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
-              <app-patient-serology *ngSwitchCase="'systems-serology'" [data]="expt['systems-serology']['data']" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-serology>
+              <app-patient-hla *ngSwitchCase="'hla'" [data]="expt['data']" [patientID]="patient.patientID"></app-patient-hla>
+              <app-patient-viral-seq *ngSwitchCase="'ebola-virus-seq'" [sequences]="expt['data']" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
+              <app-patient-viral-seq *ngSwitchCase="'lassa-virus-seq'" [sequences]="expt['data']" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-viral-seq>
+              <app-patient-serology *ngSwitchCase="'systems-serology'" [data]="expt['data']" [datasetID]="expt.dataset_id" [patientID]="patient.patientID"></app-patient-serology>
             </ng-container>
           </mat-expansion-panel>
         </ng-container>
