--- a/sample-viewer/src/app/delete-data/delete-data.component.html
+++ b/sample-viewer/src/app/delete-data/delete-data.component.html
@@ -18,14 +18,14 @@
         <mat-error *ngIf="endpoint.invalid">You must enter a value</mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <!-- <mat-form-field appearance="fill">
         <mat-label>Select a server</mat-label>
         <mat-select [formControl]="server" required>
           <mat-option value="https://data.cvisb.org">prod (data) server</mat-option>
           <mat-option value="https://dev.cvisb.org">dev server</mat-option>
         </mat-select>
         <mat-error *ngIf="server.invalid">{{getRequiredMessage(server)}}</mat-error>
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field appearance="fill">
         <mat-label>Enter an ES query to delete</mat-label>
