--- a/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
+++ b/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
@@ -31,13 +31,13 @@
 
 
 <div class="pregnant" *ngIf="patient.pregnant === true || patient.pregnant === false">
-  <fa-icon class="fas fa-lock private-icon" [icon]="faLock" matTooltip="private data; do not share"></fa-icon>
+  <fa-icon class="private-icon" [icon]="faLock" matTooltip="private data; do not share"></fa-icon>
   <span class="variable-label">pregnant:</span>
   <span class="variable-value">{{ patient.pregnant === "false" ? "no" : patient.pregnant === "true" ? "yes" : "unknown" }}</span>
 </div>
 
 <div class="occupation" *ngIf="patient.occupation">
-  <fa-icon class="fas fa-lock private-icon" [icon]="faLock" matTooltip="private data; do not share"></fa-icon>
+  <fa-icon class="private-icon" [icon]="faLock" matTooltip="private data; do not share"></fa-icon>
   <span class="variable-label">occupation:</span>
   <span class="variable-value">{{ patient.occupation }}</span>
 </div>
