--- a/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.html
+++ b/sample-viewer/src/app/patient-page/patient-warning/patient-warning.component.html
@@ -15,7 +15,7 @@
 
     <tr *ngIf="privateData">
       <td class="icon">
-        <fa-icon class="fas fa-lock private header-icon" [icon]="faLock"  matTooltip="private data; do not share"></fa-icon>
+        <fa-icon class="private header-icon" [icon]="faLock"  matTooltip="private data; do not share"></fa-icon>
       </td>
 
       <td>
