only add material theme as needed

--- a/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.scss
+++ b/sample-viewer/src/app/dataset-page/curated-alignments/curated-alignments.component.scss
@@ -1,4 +1,6 @@
 @import '../../../sass/variables.scss';
+@import '../../../sass/material-theme.scss';
+@include mat-expansion-panel-theme($candy-app-theme);
 
 .curation-explanation {
   background: lighten($lassa-md, 35%);
