--- a/sample-viewer/src/app/file-list/file-list.component.scss
+++ b/sample-viewer/src/app/file-list/file-list.component.scss
@@ -2,6 +2,7 @@
 @import '../../sass/material-theme.scss';
 @include mat-table-theme($candy-app-theme);
 @include mat-paginator-theme($candy-app-theme);
+@include mat-sort-theme($candy-app-theme);
 
 // --- Fonts ---
 h4 {
