only add material theme as needed

--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
@@ -3,6 +3,11 @@
 $new-color: darken($sierraleone-green, 10%);
 $old-color: accent-redder(600);
 
+@include mat-sort-theme($candy-app-theme);
+@include mat-table-theme($candy-app-theme);
+@include mat-expansion-panel-theme($candy-app-theme);
+@include mat-paginator-theme($candy-app-theme);
+
 .new-old-container {
   flex-direction: column;
 }
