--- a/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
@@ -1,5 +1,10 @@
 @import "../../../sass/material-theme.scss";
 @import "../../../sass/variables.scss";
+@include mat-sort-theme($candy-app-theme);
+@include mat-table-theme($candy-app-theme);
+@include mat-expansion-panel-theme($candy-app-theme);
+@include mat-paginator-theme($candy-app-theme);
+
 
 .mat-column-missing {
   color: accent-redder(500);
