--- a/sample-viewer/src/app/filters/filter-search/filter-search.component.scss
+++ b/sample-viewer/src/app/filters/filter-search/filter-search.component.scss
@@ -1,5 +1,6 @@
 @import '../../../sass/variables.scss';
 @import '../../../sass/material-theme.scss';
+@include mat-input-theme($candy-app-theme);
 
 .search input[type=text] {
   width: 1em;
