--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.scss
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.scss
@@ -1,3 +1,6 @@
+@import '../../../sass/material-theme.scss';
+@include mat-expansion-panel-theme($candy-app-theme);
+
 .clear-filter {
   justify-content: space-between;
 }
