--- a/sample-viewer/src/app/_dialogs/terms-popup/terms-popup.component.html
+++ b/sample-viewer/src/app/_dialogs/terms-popup/terms-popup.component.html
@@ -8,6 +8,6 @@
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Yep, I got it</button>
+    <button mat-button class="mat-primary" [mat-dialog-close]="true" cdkFocusInitial>Yep, I got it</button>
   </mat-dialog-actions>
 </div>
