--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.scss
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.scss
@@ -1,3 +1,5 @@
+@import '../../../sass/material-theme.scss';
+
 .progress-bar {
   max-width: 500px;
   height: 10px;
@@ -8,4 +10,25 @@
   max-width: 500px;
   text-align: right;
   margin-top: 5px;
+}
+
+.mat-progress-bar-background{
+  fill: primary(100);
+}
+.mat-progress-bar-buffer{
+  background-color: primary(100);
+}
+.mat-progress-bar-fill::after {
+  background-color: primary(500);
+}
+
+
+.mat-progress-bar-background{
+  fill: primary(100);
+}
+.mat-progress-bar-buffer{
+  background-color: primary(100);
+}
+.mat-progress-bar-fill::after {
+  background-color: primary(500);
 }
