--- a/sample-viewer/src/app/add-samples/check-dupes/check-dupes.component.scss
+++ b/sample-viewer/src/app/add-samples/check-dupes/check-dupes.component.scss
@@ -1,5 +1,8 @@
 @import '../../../sass/variables.scss';
 @import '../../../sass/material-theme.scss';
+@include mat-sort-theme($candy-app-theme);
+@include mat-table-theme($candy-app-theme);
+@include mat-paginator-theme($candy-app-theme);
 
 .emphasis {
   font-weight: 400;
