--- a/sample-viewer/src/app/add-samples/check-ids/check-ids.component.scss
+++ b/sample-viewer/src/app/add-samples/check-ids/check-ids.component.scss
@@ -1,5 +1,9 @@
 @import "../../../sass/material-theme.scss";
 
+@include mat-sort-theme($candy-app-theme);
+@include mat-table-theme($candy-app-theme);
+@include mat-paginator-theme($candy-app-theme);
+
 .id-paginator .mat-paginator-container {
   justify-content: flex-start !important;
 }
