--- a/sample-viewer/src/app/admin/login/login.component.html
+++ b/sample-viewer/src/app/admin/login/login.component.html
@@ -25,6 +25,6 @@
   <p>{{ message ? message : '' }}</p>
 
   <p>
-    <button type="button" mat-raised-button color="primary" (click)="login()">Login</button>
+    <button type="button" mat-raised-button color="primary" (click)="login()" class="mat-primary">Login</button>
   </p>
 </ng-template>
