--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
@@ -1,5 +1,9 @@
 @import '../../../sass/variables';
 @import '../../../sass/material-theme';
+@include mat-table-theme($candy-app-theme);
+@include mat-paginator-theme($candy-app-theme);
+@include mat-sort-theme($candy-app-theme);
+
 
 .rotate-clockwise {
   -webkit-transform: rotate(90deg);
