--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -21,6 +21,7 @@
 @include mat-checkbox-theme(mat-light-theme(mat-palette($mat-grey), $candy-app-primary, $candy-app-warn));
 @include mat-snack-bar-theme($candy-app-theme);
 @include mat-stepper-theme($candy-app-theme);
+@include mat-radio-theme($candy-app-theme);
 @include mat-dialog-theme($candy-app-theme);
 
 body {
