--- a/sample-viewer/src/app/admin/login/login.component.html
+++ b/sample-viewer/src/app/admin/login/login.component.html
@@ -4,7 +4,7 @@
   <p>Hi {{ user.name }}!</p>
 
   <p>
-    <button type="button" mat-raised-button color="primary" (click)="logout()">Logout</button>
+    <button type="button" mat-raised-button color="primary" (click)="logout()" class="mat-primary">Logout</button>
   </p>
 </ng-container>
 
