fix mat button stylings

--- a/sample-viewer/src/app/delete-data/delete-data.component.html
+++ b/sample-viewer/src/app/delete-data/delete-data.component.html
@@ -52,4 +52,4 @@
   </div>
 
 </div>
-<ng-template #not_auth>Hey! You're not Laura, so you're not allowed to delete stuff.</ng-template>
+<ng-template #not_auth>Hi {{user.given_name}}! You're not Laura, so you're not allowed to delete stuff.</ng-template>
