--- a/sample-viewer/src/app/admin/about-data/about-data.component.html
+++ b/sample-viewer/src/app/admin/about-data/about-data.component.html
@@ -10,16 +10,16 @@
 
 
   <h4>Data overview</h4>
-  <div class="container release-header current-release" *ngIf="releaseVersion">
+  <div class="container release-header current-release" *ngIf="cvisbCatalog$ | async as cvisbCatalog">
     <div class="current-label">
       Current version:
     </div>
 
     <div class="version">
-      CViSB version {{ releaseVersion }}
+      CViSB version {{ cvisbCatalog.releaseVersion }}
     </div>
     <div class="updated">
-      updated {{ dataModified | date: "d MMMM y" }}
+      updated {{ cvisbCatalog.dateModified | date: "d MMMM y" }}
     </div>
   </div>
 
@@ -27,7 +27,8 @@
 
   <h4>Where do our data come from?</h4>
   <p>
-    The majority of our data is provided to CViSB through a partnership with the Kenema Government hospital (KGH) in Sierra Leone. KGH is home to Sierra Leone's only Lassa fever isolation ward, which was used during the 2014-2016 West African Ebola outbreak
+    The majority of our data is provided to CViSB through a partnership with the Kenema Government hospital (KGH) in Sierra Leone. KGH is home to Sierra Leone's only Lassa fever isolation ward, which was used during the 2014-2016 West African Ebola
+    outbreak
     to treat Ebola as well. Read more about the
     <a href="https://www.nature.com/news/infectious-disease-ebola-s-lost-ward-1.15990" rel="noreferrer" target="_blank">
       isolation ward in the height of the Ebola outbreak
@@ -48,7 +49,9 @@
     <div class="variable-description" id="cohort">
       <h5>Cohort definition</h5>
       <p>
-        Patients are grouped into four cohorts: <span class="emphasis-light">Ebola</span>, <span class="emphasis-light">Lassa</span>, <span class="emphasis-light">Control</span>, or Unknown. <span class="emphasis">People in the Ebola or Lassa group are not necessarily infected with the virus.</span>        Rather, they are either patients suspected of infection (pending diagnostic confirmation), or contacts of these patients who have suspected exposure to the virus. For specific analyses, you will need to decide how to define the cohort.
+        Patients are grouped into four cohorts: <span class="emphasis-light">Ebola</span>, <span class="emphasis-light">Lassa</span>, <span class="emphasis-light">Control</span>, or Unknown. <span class="emphasis">People in the Ebola or Lassa group
+          are not necessarily infected with the virus.</span> Rather, they are either patients suspected of infection (pending diagnostic confirmation), or contacts of these patients who have suspected exposure to the virus. For specific analyses,
+        you will need to decide how to define the cohort.
       </p>
     </div>
 
