--- a/sample-viewer/src/app/admin/release-notes/release-notes.component.html
+++ b/sample-viewer/src/app/admin/release-notes/release-notes.component.html
@@ -1,14 +1,14 @@
-<div class="centered about-text" *ngIf="releaseNotes">
+<div class="centered about-text" *ngIf="cvisbCatalog$ | async as cvisbCatalog">
   <div class="container main-header">
     <h1>Release notes</h1>
 
-    <div class="container current-release" *ngIf="releaseVersion">
+    <div class="container current-release">
       <div class="current-label">
         current version
       </div>
 
       <div class="version">
-        CViSB version {{ releaseVersion }}
+        CViSB version {{ cvisbCatalog.releaseVersion }}
       </div>
       <!-- <div class="updated">
       updated {{ dataModified | date: "d MMMM y" }}
@@ -20,7 +20,7 @@
     Note: only major versions with big changes are shown. In between releases, there may be minor changes, particularly to sample metadata.
   </div>
 
-  <div class="release-notes" *ngFor="let release of releaseNotes">
+  <div class="release-notes" *ngFor="let release of cvisbCatalog.releaseNotes">
     <div class="container release-header" [ngClass]="{'current-release': release.version === releaseVersion}">
       <div class="version">
         CViSB version {{release.version }}
