--- a/sample-viewer/src/app/home/home.component.html
+++ b/sample-viewer/src/app/home/home.component.html
@@ -173,8 +173,8 @@
         More about our data
       </div>
       <div class="description">
-        <ng-container *ngIf="releaseVersion && releaseNotes && releaseNotes.length > 0">
-          <a routerLink="/release-notes" class="link">Version {{releaseVersion}}</a> was released on {{releaseNotes[0].datePublished | date: "d MMMM y"}}.
+        <ng-container *ngIf="cvisbCatalog$ | async as cvisbCatalog">
+          <a routerLink="/release-notes" class="link">Version {{cvisbCatalog.releaseVersion}}</a> was released on {{cvisbCatalog.releaseNotes[0].datePublished | date: "d MMMM y"}}.
         </ng-container>
         See our <a routerLink="/documentation" class="link">documentation</a> section for more info about
         our data and their limitations.
