remove console.logs

--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.html
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.html
@@ -43,7 +43,7 @@
 
 
 <!-- TABLE -->
-<mat-table [dataSource]="dataSource" matSort class="sample-table">
+<mat-table [dataSource]="dataSource" matSort class="sample-table" [hidden]="!dataSource">
   <!-- Checkbox Column -->
   <!-- <ng-container matColumnDef="select">
     <th mat-header-cell *matHeaderCellDef>
