add mat autocomplete, mat chips

--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.scss
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.scss
@@ -1,3 +1,6 @@
+@import "../../../sass/material-theme.scss";
+@include mat-chips-theme($candy-app-theme);
+
 .patient-id-filter {
   width: 250px;
 }
