switch from ng-select to mat-autocomplete w/ mat-chips

--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -31,7 +31,7 @@
   </div> -->
 
   <div class="filter-item filter-patients">
-    <app-filter-patient-id [all_patients]="patients" [patients]="patients" endpoint="sample"></app-filter-patient-id>
+    <app-filter-patient-id [all_patients]="all_patients" endpoint="sample"></app-filter-patient-id>
   </div>
 
   <div class="filter-item filter-patient-types">
