--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -2,7 +2,6 @@
 @import './sass/variables.scss'; // custom variables, usually colors
 // @import 'sass/variables'; // custom variables, usually colors
 @import './sass/material-theme.scss'; // @import 'custom_colors';
-@import "~@ng-select/ng-select/themes/default.theme.css"; // Fonts
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Material+Icons');
 
 // --- Material theme, common across the apps ---
@@ -24,6 +23,7 @@
 @include mat-radio-theme($candy-app-theme);
 @include mat-dialog-theme($candy-app-theme);
 @include mat-progress-bar-theme($candy-app-theme);
+@include mat-autocomplete-theme($candy-app-theme);
 
 body {
   font-family: $font-default;
