--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -1,5 +1,5 @@
 <div class="patient-id-filter container-column">
-  <h4 class="filter-label">patient IDs</h4>
+  <h4 class="filter-label">patient ID</h4>
 
   <div class="container" *ngIf="all_patients">
     <mat-form-field class="example-chip-list" (search)="onSearch($event)">
