switch from ng-select to mat-autocomplete w/ mat-chips

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -27,7 +27,7 @@
 
         <div>
           <div class="filter-item filter-patients">
-            <app-filter-patient-id [all_patients]="allPatientSummary.patientIDs" [patients]="patientSummary.patientIDs" endpoint="patient"></app-filter-patient-id>
+            <app-filter-patient-id [all_patients]="allPatientSummary.patientIDs" endpoint="patient"></app-filter-patient-id>
           </div>
 
           <div class="filter-item filter-dates">
