--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
@@ -8,6 +8,30 @@
   <div class="client-responses">
 
     <button type="button" mat-raised-button color="warn" [disabled]="!data2upload" (click)="uploadData()">Upload data</button>
+    <ng-container *ngIf="data2upload">
+      <ng-container>
+        <h5 class="dev-warning">These patients have multiple entries in the database.</h5>
+        <p>
+          This is probably an error! Delete the duplicates. If you proceed with the upload, the first entry will be overwritten, and the other ones will remain unchanged.
+        </p>
+        <div *ngFor="let item of dupes">
+          {{item}}
+        </div>
+      </ng-container>
+
+      <h5 class="dev-warning">Existing IDs which will be overwritten</h5>
+      <p>
+        These patients already exist in the database. They will be overwritten.
+      </p>
+      <div *ngFor="let item of data2upload.filter(d => d._id)">
+        {{item.patientID}}
+      </div>
+
+      <h5>New IDs to add:</h5>
+      <div *ngFor="let item of data2upload.filter(d => !d._id)">
+        {{item.patientID}}
+      </div>
+    </ng-container>
 
     <ng-container *ngIf="uploadResponse">
       <h1>{{ uploadResponse }}</h1>
