--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
@@ -1,7 +1,7 @@
 <div class="upload-button" *ngIf="user.write">
   <div class="btn-group">
     <!-- Dummy for styling -->
-    <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload patient list!</button>
+    <button type="button" mat-raised-button color="primary" (click)="fileInput.click()">Upload patient list</button>
     <!-- Actual workhorse to upload the data on the client side -->
     <input hidden class="d-none" type="file" #fileInput (change)="fileChange($event)" placeholder="Upload file" accept=".csv,.xlsx,.xls,.json" id="file_uploader">
 
@@ -77,10 +77,6 @@
 
 </div>
 
-<!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
-<div style="margin-top: 25px;" *ngIf="user.email === 'laura.d.hughes@gmail.com'">
-  <button type="button" mat-raised-button color="warn" (click)="deletePatients()">DON'T PRESS THIS BUTTON -- clears patient list</button>
-</div>
 
 <div *ngIf="! user.write">
   <p>
