--- a/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
+++ b/sample-viewer/src/app/add-patients/patient-upload/patient-upload.component.html
@@ -15,7 +15,7 @@
 
       <!-- data replacement comments -->
       <ng-container *ngIf="data2upload && !uploading">
-        <ng-container *ngIf="dupes.length">
+        <ng-container *ngIf="dupes && dupes.length">
           <h3 class="warning">These patients have multiple entries in the database.</h3>
           <p>
             This is probably an error! Delete the duplicates. If you proceed with the upload, the first entry will be overwritten, and the other ones will remain unchanged.
@@ -25,7 +25,7 @@
           </div>
         </ng-container>
 
-        <ng-container *ngIf="replacementIDs.length">
+        <ng-container *ngIf="replacementIDs && replacementIDs.length">
           <h3 class="warning">Existing IDs which will be overwritten</h3>
           <p>
             These patients already exist in the database. They will be overwritten.
@@ -35,7 +35,7 @@
           </div>
         </ng-container>
 
-        <ng-container *ngIf="newIDs.length">
+        <ng-container *ngIf="newIDs && newIDs.length">
           <h3>New IDs to add:</h3>
           <div *ngFor="let id of newIDs">
             {{id}}
